welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:3: error: ';' expected but ',' found.
              if ((x==getMondeLargeur()-1&&k>0)||(x==0&&k<1)) {y=y+1;x=0,k = k* -1} else x=x+k
                                                                        ^